# contract-simulator

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.railway  README.md  docker-compose.yml  pyproject.toml  railway.json  railway_start.sh  start.bat  start.sh
cs_frontend/components/: upload.py  walkthrough.py
data/sample/: create_samples.py  sample_msa.docx
data/scenarios/: change_of_control.json  data_breach.json  force_majeure.json  ip_dispute.json  service_outage.json  termination_for_convenience.json
frontend/: app.py
frontend/components/: scenario_selector.py  walkthrough.py
src/contract_simulator/api/: main.py
src/contract_simulator/api/routes/: contracts.py  scenarios.py  simulations.py
src/contract_simulator/core/: config.py  security.py
src/contract_simulator/models/: contract.py  scenario.py  simulation.py
src/contract_simulator/prompts/: clause_extraction.py  parameter_suggestions.py  simulation.py
src/contract_simulator/services/: clause_extractor.py  parameter_suggester.py  parser.py  scenario_engine.py  simulator.py
tests/: conftest.py  test_api.py  test_clause_extractor.py  test_parser.py  test_scenario_engine.py  test_simulator.py
